complete user documentation api swagger
